# cookiecutter-iomete-pyspark

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Makefile  application.conf  driver.py  readme.md  setup.cfg
{{cookiecutter.project_slug}}/docker/: Dockerfile
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: job_example.py  main.py  utils.py
