[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = {{ cookiecutter.project_slug }}
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = {{ cookiecutter.project_slug }}
install_requires =
    pyhocon~=0.3.59
    setuptools~=60.2.0

[options.extras_require]
dev =
    pyspark==3.1.2
    pytest==7.1.2
